--- a/arquivo.html
+++ b/arquivo.html
@@ -5,9 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arquivo PDF</title>
+
+    <style type="text/css">
+        table, th, td{
+            border: 1px solid black;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Arquivo PDF de teste</h1>
-    <hr>
+    <h1>Orçamento</h1>
+    <h2>Nome</h2>
+    <p>Jaú, 22 de maio de 2023</p>
+
+    <table style="width: 50%;">
+        <tr>
+            <th>QTD</th>
+            <th>PRODUTO</th>
+            <th>R$ VALOR</th>
+            <th>R$ TOTAL</th>
+        </tr>
+
+        <tr>
+            <td>04</td>
+            <td>Avental Raspa 1,00M - CA 32467</td>
+            <td>38,90</td>
+            <td>155,60</td>
+        </tr>
+
+    </table>
 </body>
 </html>
